# forge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml
.forge-backup-20260514-004616/docs/: architecture.md
.forge-backup-20260514-004616/scripts/: deploy.sh  setup-local.sh
.forge-backup-20260514-004616/src/forge/: config.py
.forge-backup-20260514-004616/src/forge/api/: routes.py  server.py
.forge-backup-20260514-004616/src/forge/auth/: middleware.py
.forge-backup-20260514-004616/src/forge/core/: orchestrator.py
.forge-backup-20260514-004616/src/forge/resilience/: circuit_breaker.py
.forge-backup-20260514-004616/tests/: test_integration.py
.github/workflows/: ci.yml  release.yml
demo/: spec-to-pr.md
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/adr/: 001-architecture-overview.md  002-telemetry-strategy.md  003-security-model.md
docs/runbooks/: agent-stuck-in-review.md  memory-fabric-partition.md  trident-graph-timeout.md
helm/forge/: Chart.yaml  values.yaml
helm/forge/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secrets.yaml  servicemonitor.yaml
monitoring/: prometheus-rules.yml
scripts/: deploy.sh  setup-local.sh  smoke-tests.sh
src/forge/: __init__.py  __version__.py  cli.py  config.py
src/forge/agents/: __init__.py  coder.py  planner.py  reviewer.py
src/forge/api/: __init__.py  routes.py  server.py  sse.py  websocket.py
src/forge/api/static/: index.html
src/forge/auth/: __init__.py  middleware.py
src/forge/core/: __init__.py  agent_registry.py  orchestrator.py  spec_engine.py
src/forge/events/: __init__.py  bus.py
src/forge/governance/: __init__.py  runtime.py
src/forge/mcp/: __init__.py  mesh.py  server.py
src/forge/mcp/adapters/: __init__.py  github.py  jira.py
src/forge/memory/: __init__.py  fabric.py
src/forge/memory/backends/: __init__.py  redis.py
src/forge/persistence/: __init__.py  store.py
src/forge/protocols/: __init__.py  agent.py  mcp.py  memory.py
src/forge/resilience/: __init__.py  circuit_breaker.py  retry.py
src/forge/telemetry/: __init__.py  health.py  instrumentation.py  logging.py
src/forge/trident/: __init__.py  config.py  ensemble.py  features.py  graph_builder.py
src/forge/utils/: logging.py
src/forge/voice/: __init__.py  session.py  spec_generator.py  transcriber.py
src/forge/web/: __init__.py  health.py
tests/: conftest.py  test_api.py  test_deploy.py  test_events.py  test_governance.py  test_hypothesis.py  test_integration.py  test_load.py  test_memory.py  test_orchestrator.py  test_resilience.py  test_security.py  test_spec_engine.py  test_trident.py  test_voice.py
