[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "forge-sdlc"
dynamic = ["version"]
description = "Forge — Agent-Native SDLC Control Plane powered by BGI Trident"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Abhinav Khare", email = "abhinav@ahinsa.ai"},
]
keywords = [
    "agentic-ai",
    "sdlc",
    "mcp",
    "orchestration",
    "bgi-trident",
    "developer-tools",
    "ai-governance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "anyio>=4.2.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.1",
    "tomli>=2.0.1; python_version<'3.11'",
    "networkx>=3.2.1",
    "asyncio-mqtt>=0.16.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-exporter-prometheus>=0.43b0",
    "prometheus-client>=0.19.0",
    "sentry-sdk[fastapi]>=1.39.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "tenacity>=8.2.0",
    "httpx-sse>=0.4.0",
    "itsdangerous>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=13.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.0.0",
    "testcontainers>=3.7.0",
    "locust>=2.20.0",
    "respx>=0.20.0",
    "freezegun>=1.4.0",
]
security = [
    "bandit[toml]>=1.7.6",
    "pip-audit>=2.6.0",
    "safety>=3.0.0",
    "semgrep>=1.55.0",
    "trivy>=0.48.0",
]
trident = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "dgl>=2.0.0",
    "xgboost>=2.0.0",
]
all = [
    "forge-sdlc[dev,security,trident]",
]

[project.urls]
Homepage = "https://github.com/ahinsaai/forge"
Documentation = "https://forge-sdlc.readthedocs.io"
Repository = "https://github.com/ahinsaai/forge"
Issues = "https://github.com/ahinsaai/forge/issues"
Changelog = "https://github.com/ahinsaai/forge/blob/main/CHANGELOG.md"

[project.scripts]
forge = "forge.cli:main"

[tool.hatch.version]
path = "src/forge/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "S",
    "C90",
    "PL",
    "RUF",
]
ignore = ["E501", "S101", "S311"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=forge --cov-report=term-missing --cov-report=xml --cov-report=html -n auto --reruns 2 --reruns-delay 1"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "chaos: marks tests as chaos engineering tests",
    "security: marks tests as security tests",
]

[tool.coverage.run]
source = ["src/forge"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__version__.py",
    "*/protocols/*",
    "*/telemetry/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
]
fail_under = 90

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B311"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
build_command = "python -m build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false

[tool.hatch.metadata]
allow-direct-references = true
